--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
     "express": "~4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.8.0",
     "morgan": "~1.10.0",
