--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "pg-hstore": "^2.3.3",
     "pug": "3.0.2",
     "sequelize": "^6.5.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
