--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.8.0",
+    "jquery": "^3.6.0",
     "morgan": "~1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
@@ -20,7 +21,12 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0"
   }
 }
