--- a/package.json
+++ b/package.json
@@ -21,12 +21,7 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
-    "supertest": "^6.1.3",
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
+    "supertest": "^6.1.3"
   }
 }
