--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
+    "ejs": "^3.1.6",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.8.0",
-    "jquery": "^3.6.0",
     "morgan": "~1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
@@ -21,12 +21,7 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "babel-loader": "^8.0.4",
     "jest": "^26.6.3",
-    "supertest": "^6.1.3",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
+    "supertest": "^6.1.3"
   }
 }
