--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^4.5.3",
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
     "ejs": "^3.1.6",
@@ -14,9 +15,11 @@
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "http-errors": "~1.8.0",
+    "jquery": "^3.5.1",
     "morgan": "~1.10.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "popper.js": "^1.16.1",
     "pug": "3.0.2",
     "sequelize": "^6.5.0"
   },
