--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.3",
+    "connect-session-sequelize": "^7.1.1",
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.1",
     "ejs": "^3.1.6",
